examples/lambda-function-url/packages/api/errors/BadRequestError.ts
import BaseError from './BaseError'

export default class BadRequestError extends BaseError {
  constructor(message, rootCause, ...params) {
    super('BadRequestError', message, rootCause, ...params)
  }
}
